# robotis_op_simulation

./: readme.md
robotis_op_gazebo/: CMakeLists.txt  README.md  package.xml
robotis_op_gazebo/config/: robotis_op_walking.cfg
robotis_op_gazebo/include/robotis_op_gazebo/: gazebo_walking.h  gazebo_walking_node.h
robotis_op_gazebo/launch/: darwin_gazebo.launch  darwin_gazebo_trajectory.launch  robotis_op_gazebo.launch  robotis_op_gazebo_position_control_empty_world.launch  robotis_op_gazebo_position_control_soccer_field.launch  robotis_op_gazebo_trajectory.launch
robotis_op_gazebo/scripts/: walker_demo.py
robotis_op_gazebo/src/: gazebo_walking.cpp  gazebo_walking_node.cpp
robotis_op_gazebo/src/math/: Matrix.cpp  Plane.cpp  Point.cpp  Vector.cpp
robotis_op_gazebo/worlds/: soccer_field.sdf  soccer_field.world  soccer_field_mod.world
robotis_op_simulation_control/: CMakeLists.txt  README.md  package.xml
robotis_op_simulation_control/config/: darwin_control.yaml  robotis_op_control.yaml  robotis_op_position_position_control.yaml  robotis_op_trajectory_control.yaml  trajectory_control.yaml
robotis_op_simulation_control/launch/: robotis_op_position_control.launch  robotis_op_simulation_control.launch  robotis_op_trajectory_control.launch
robotis_op_simulation_walking/: CMakeLists.txt  package.xml  setup.py
robotis_op_simulation_walking/config/: robotis_op_walking.cfg
robotis_op_simulation_walking/include/robotis_op_simulation_walking/: gazebo_walking_node.h
robotis_op_simulation_walking/scripts/: walker.py
robotis_op_simulation_walking/src/: gazebo_walking.cpp  gazebo_walking_node.cpp
robotis_op_simulation_walking/src/math/: Matrix.cpp  Plane.cpp  Point.cpp  Vector.cpp
robotis_op_simulation_walking/src/robotis_op_simulation_walking/: darwin.py
